# roll-flow

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  lazygit-thoughts.md  package.nix
.github/workflows/: ci.yml  release-check.yml  tag-on-main.yml  version-bump-check.yml
modules/home-manager/: roll-flow.nix
modules/nixos/: roll-flow.nix
src/: error.rs  main.rs
src/cli/: mod.rs  status.rs
src/core/: branches.rs  config.rs  git.rs  mod.rs  ops.rs
src/tui/: mod.rs  rolls.rs
tests/: cli_flow.rs  e2e_lifecycle.rs  host_verify.rs  hotfix.rs  robustness.rs  status_ergonomics.rs
tests/harness/: mod.rs
