[package]
name = "roll-flow"
version = "0.0.15"
edition = "2021"

[[bin]]
name = "rf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "local-offset"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.21.0"
serde_json = "1.0.145"
